--- a/bctanncrawler/index.jade
+++ b/bctanncrawler/index.jade
@@ -1,14 +1,14 @@
-﻿html
-head
-meta(charset='utf-8')
-title!=title
-body
+doctype html
+html
+  head
+    meta(charset='utf-8')
+    title!=title
+  body
+    h1(style={color:'red'}) Bitcointalk ANN update
+    form(method="POST", action="/")
+      input(type="hidden", name="_method", value="PUT")
+      input(type="submit")
 
-h1 Bitcointalk ANN update
-form(method="POST", action="/")
- input(type="hidden", name="_method", value="PUT")
- input(type="submit")
-
-for item in message
- p 
-    a(href="#{item.ann_href}")       #{item.ann_msgID}  :   #{item.ann_title}
+    for item in message
+      p 
+        a(target= "_blank" href="#{item.ann_href}")       #{item.ann_msgID}  :   #{item.ann_title}
