--- a/bctanncrawler/index.jade
+++ b/bctanncrawler/index.jade
@@ -3,12 +3,18 @@ html
   head
     meta(charset='utf-8')
     title!=title
+    style(type="text/css").
+      h1 {color:red;}
+      #mytimer {color:green;}
   body
-    h1(style={color:'red'}) Bitcointalk ANN update
+    h1 Bitcointalk ANN update
     form(method="POST", action="/")
       input(type="hidden", name="_method", value="PUT")
       input(type="submit")
 
+    div(id="mytimer")
+    script(type="text/javascript")
+        |setInterval(function() {document.getElementById("mytimer").innerHTML=new Date().toLocaleTimeString();},1000);
     for item in message
       p 
         a(target= "_blank" href="#{item.ann_href}")       #{item.ann_msgID}  :   #{item.ann_title}
