--- a/wwwsnow/index.jade
+++ b/wwwsnow/index.jade
@@ -76,6 +76,16 @@ html
                      span 雪地狂欢
                    div(class="value")
                      span N/A
+         div(class="card push-up-10")
+           div(id="paymentsReport" class="table-responsive")
+             table(class="table table-hover table-striped")
+                thead
+                  tr
+                     th(class="col1")
+                         span 矿工
+                     th(class="col2")
+                         span 算力
+               tbody(id="paymentsReport_rows")
   
          p 矿工列表：   
          ul
